2013-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #10037: Connect static_territories with static_countries

2013-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #39552: Default TS constants contain superfluous dot
	* Added feature #45626: Update countries to level of ISO 3166-1:2006 - Newsletter VI-12 (2012-02-15)
	* Added feature #45626: Update countries to level of ISO 3166-1:2006 - Newsletter VI-14 (2013-02-06)
	* Added feature #43009: Add federal states of croatia to static_country_zones
	* Fixed issue #45372: Update Åland Islands tdl
	* Added feature #45630: Update currencies in accordance with ISO 4217 Amendment Number 154
	* Fixed issue #35775: Remove redundant indexes
	* Fixed issue #40509: Wrong ISO codes for currency Serbian Dinar
	* Follow up to feature #45630: Update currencies in accordance with ISO 4217 Amendment Number 154
	* Update version to 2.3.2
	* Resolves #45681: Require TYPO3 4.7
	* Update version to 2.4
	* Resolves #45684: Add autoloading
	* Follow up to #45684: Add autoloading
	* Fixed issue #45686: Remove reference to static_info_tables_markets
	* Resolves #45688: Always keep tables utf-8-encoded
	* Resolves #45692: Move static template to Configuration directory
	* Resolves #45689: Convert locallang files to XLIFF

2013-02-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 2.3.1

2012-05-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed security issue [Ticket#2011101510000057] XSS in static_info_tables 2.3.0

2011-12-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #32614: Errors in names of two provinces of Italy
	* Fixed issue #32094: Usage of deprecated testInt method (Thanks to Stefan Galinski)
	* Fixed issue #29241: NZ static currencies thousands decimal
	* Fixed issue #28830: cn_short_local for Czech Republic misses an accent mark
	* Added feature #32635: Update countries to level of ISO 3166-1:2006 - Newsletter VI-9 (2011-06-12)